--- a/src/index.html
+++ b/src/index.html
@@ -44,5 +44,8 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
 
+  <!-- Paypal -->
+  <script src="https://www.paypal.com/sdk/js?client-id=Af3iMYA-ribCizQN2yabwlPWffTEjSqDHBmrAS0o5nse0ZwSGbm2D-L0jdO50QDPvMUnF_BKzZd-wYds"></script>
+
 </body>
 </html>
